fixed spacing and positioning of header and main

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,32 +4,44 @@ div {
 
 header {
   display: flex;
+  position: fixed;
+  align-items: center;
+  width: 100%;
+  height: 80px;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  position: fixed;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
 }
 
 .logo {
   color: MediumAquamarine;
+  width: 70%;
 }
 
 nav {
-
+  padding-left: 40px;
 }
 
 main {
+  padding-top: 115px;
   display: flex;
 }
 
-.column.large {
+.column .large {
   width: 630px;
 }
 
-.column.medium {
+.column .medium {
   width: 300px;
 }
 
-.column.small {
+.column .small {
   width: 240px;
+}
+
+.column {
+  flex-direction: column;
+  margin: 20px;
 }
